# fastapi-scaff

./: .dockerignore  .gitignore  .history  Dockerfile  Dockerfile-slim  README.md  build.sh  docker-compose.swarm.yaml  docker-compose.yaml  docker-swarm.yaml  nomad-app.hcl  nomad-setup.sh  nomad-traefik.hcl  pyproject.toml  requirements.txt  runcbeat.py  runcworker.py  runmigration.py  runserver.py  setup.py
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py  deps.py  exceptions.py  responses.py  status.py
app/api/default/: __init__.py  ahealth.py  aping.py  health.py  ping.py
app/api/v1/: user.py
app/core/: __init__.py  _conf.py  _db.py  _log.py  _redis.py  _snow.py  exceptions.py  middleware.py  responses.py  status.py
app/initializer/: __init__.py  _conf.py  _db.py  _log.py  _redis.py  _snow.py  context.py  dependencies.py
app/middleware/: __init__.py  auth.py  auths.py  cors.py  exceptions.py  headers.py  http.py
app/migrations/alembic/: env.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  user.py
app/services/: user.py
app/utils/: __init__.py  api_key_util.py  auths_util.py  cookie_util.py  db_async_util.py  db_util.py  ext_util.py  jwt_util.py
app_celery/: README.md  __init__.py  conf.py  requirements.txt
app_celery/consumer/: __init__.py
app_celery/consumer/tasks/: __init__.py  beat_health.py  beat_ping.py  health.py
app_celery/consumer/workers/: __init__.py  beat_health.py  beat_ping.py  health.py  ping.py
app_celery/producer/: __init__.py  publisher.py  registry.py  tests.py
config/: .env  app_dev.yaml  app_prod.yaml  app_test.yaml  gunicorn.conf.py  nginx.conf
fastapi_scaff/: __init__.py  __main__.py  _api_tpl.json  _project_tpl.json
fastapi_scaff/mgr/: mgr.py
fastapi_scaff/mgr/_api_tpl/: a_app_api.py  as_app_api.py  asm_app_api.py  l_app_api.py  l_app_models.py  l_app_models_nodb.py  l_app_services.py  light_app_api.py  micro_app_api.py  only_app_api.py  only_app_models.py  only_app_repositories.py  s_app_api.py  s_app_api_nodeclorm.py  s_app_models.py  s_app_models_nodb.py  s_app_models_nodeclorm.py  s_app_repositories.py  s_app_repositories_nodb.py  s_app_schemas_nodb.py  s_app_services.py  s_app_services_nodeclorm.py  t_app_api.py  tiny_app_api.py
fastapi_scaff/mgr/_micro_sp/: initializer.py
fastapi_scaff/mgr/_single/: __init__.py  api.py  core.py  main.py
fastapi_scaff/mgr/_tiny/: initializer.py  middleware.py
fastapi_scaff/mgr/_tiny_sp/: initializer.py  middleware.py
